# arachne

./: .gitignore  CMakeLists.txt  Doxyfile  readme.md
.github/: renovate.json
.github/workflows/: codeql.yml  html.yml  tests.yml
include/: arachne.hpp  ariadne.hpp  http_client.hpp  penelope.hpp  pheidippides.hpp  rng.hpp  utils.hpp
src/: arachne.cpp  ariadne.cpp  http_client.cpp  penelope.cpp  pheidippides.cpp  rng.cpp  utils.cpp
tests/: arachne_tests.cpp  http_client_tests.cpp  pheidippides_tests.cpp  rng_tests.cpp  sparql_tests.cpp
